--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Crud con servidor express y fs",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
